--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
-    "client/node_modules": true,
-    "node_modules": true
+    // "client/node_modules": true,
+    // "node_modules": true
   }
 }
