--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "client",
+  "name": "practica-lsv-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.0",
-    "@mui/material": "^5.2.0",
+    "@mui/material": "^5.2.1",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
