--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,17 @@
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.1",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/x-date-pickers": "^5.0.0-alpha.4",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^9.0.1",
+    "react-youtube": "^9.0.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
