--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_PASSWORD: practica_lsv
+      POSTGRES_PASSWORD: pr4ct1c4_15v_pwd
       POSTGRES_DB: practica_lsv_db
     volumes: 
       - ./database/build.sql:/docker-entrypoint-initdb.d/build.sql
