Listo para hacer deploy a heroku

--- a/client/package.json
+++ b/client/package.json
@@ -47,5 +47,6 @@
   },
   "resolutions": {
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
