--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "practica-lsv-server",
   "version": "1.0.0",
   "main": "src/index.js",
+  "engines": {
+    "node": "16.15.1",
+    "npm": "8.11.0"
+  },
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node ."
+    "start": "node src/index.js",
+    "heroku-postbuild":  "cd client && npm install && npm run build"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
