--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "pg": "^8.7.1"
+    "bcrypt": "~5.0.1",
+    "cors": "~2.8.5",
+    "dotenv": "~16.0.1",
+    "express": "~4.17.1",
+    "jsonwebtoken": "~8.5.1",
+    "morgan": "~1.10.0",
+    "pg": "~8.7.1"
   },
   "keywords": [],
   "author": "jesusdpp96@gmail.com",
+  "co-author": "alfredofp63@gmail.com",
   "license": "ISC",
   "description": ""
 }
