--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "react-toastify": "^9.0.1",
+    "react-toastify": "9.0.1",
     "react-youtube": "^9.0.2",
     "web-vitals": "^2.1.2"
   },
