--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,11 @@
     ]
   },
   "resolutions": {
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "react-error-overlay": "6.0.9"
   },
-  "proxy": "http://localhost:4000/"
+  "proxy": "http://localhost:4000/",
+  "devDependencies": {
+    "react-error-overlay": "6.0.9"
+  }
 }
