--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.7.1"
   },
   "devDependencies": {
+    "csv-parser": "^3.0.0",
     "jest": "^29.7.0",
     "nodemon": "^2.0.15"
   },
